# libfex

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  bootstrap.sh  configure.ac
samples/: FilterSample.cpp  FilterSetSample.cpp  Makefile.am  MathSample.cpp
src/: Classifier.hpp  DebugHelpers.cpp  DebugHelpers.hpp  FeatureSet.hpp  FilterSet.hpp  FilteringHelpers.hpp  GaborFeatureSet.hpp  GaborFilter.hpp  GaborSet.hpp  IOHelpers.cpp  IOHelpers.hpp  ImageHelpers.hpp  LDAQR.hpp  Makefile.am  MathHelpers.hpp  libfex.pc  libfex.pc.in
